# maity_desktop

./: .gitignore  .mcp.json  BLUETOOTH_PLAYBACK_NOTICE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRIVACY_POLICY.md  README.md  README_ADDENDUM.md  SETUP_WINDOWS.md
.claude/: settings.local.json
.github/workflows/: build-devtest.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml
backend/: API_DOCUMENTATION.md  README.md  start_with_output.ps1
backend/app/: main.py
docs/: BUILDING.md  GPU_ACCELERATION.md  TRANSCRIPTION_PIPELINE.md  architecture.md  building_in_linux.md
frontend/: .gitignore  README.md  build-gpu.bat  build-gpu.ps1  build-gpu.sh  build.bat  build.ps1  build_backup.bat  dev-gpu.bat  dev-gpu.ps1  dev-gpu.sh  package.json  tailwind.config.js
frontend/scripts/: auto-detect-gpu.js  tauri-auto.js
frontend/src-tauri/: Cargo.toml  NOTIFICATION_TESTING.md  build.rs  tauri.conf.json
frontend/src-tauri/src/: auth_server.rs  lib.rs  main.rs  onboarding.rs  tray.rs
frontend/src-tauri/src/analytics/: analytics.rs  commands.rs
frontend/src-tauri/src/api/: api.rs  client.rs  endpoints.rs  mod.rs  models.rs
frontend/src-tauri/src/audio/: audio_processing.rs  batch_processor.rs  buffer_pool.rs  device_monitor.rs  encode.rs  ffmpeg.rs  ffmpeg_mixer.rs  hardware_detector.rs  incremental_saver.rs  mod.rs  pipeline.rs  recording_commands.rs  recording_helpers.rs  recording_lifecycle.rs  recording_manager.rs  recording_preferences.rs  recording_saver.rs  recording_state.rs  vad.rs
frontend/src-tauri/src/audio/capture/: backend_config.rs  core_audio.rs  mod.rs  system.rs  wasapi_loopback.rs
frontend/src-tauri/src/audio/devices/: configuration.rs
frontend/src-tauri/src/audio/transcription/: canary_provider.rs  deepgram_commands.rs  deepgram_provider.rs  engine.rs  mod.rs  worker.rs
frontend/src-tauri/src/canary_engine/: canary_engine.rs  commands.rs  mod.rs  model.rs  preprocessor.rs
frontend/src-tauri/src/console_utils/: console_utils.rs  mod.rs
frontend/src-tauri/src/database/: commands.rs  manager.rs  models.rs
frontend/src-tauri/src/database/repositories/: meeting.rs  setting.rs  transcript.rs
frontend/src-tauri/src/logging/: commands.rs  file_logger.rs  mod.rs
frontend/src-tauri/src/meeting_detector/: commands.rs  detector.rs  mod.rs  process_monitor.rs  settings.rs
frontend/src-tauri/src/moonshine_engine/: commands.rs  mod.rs  model.rs  moonshine_engine.rs
frontend/src-tauri/src/notifications/: commands.rs  system.rs  types.rs
frontend/src-tauri/src/ollama/: metadata.rs  mod.rs
frontend/src-tauri/src/openrouter/: mod.rs
frontend/src-tauri/src/parakeet_engine/: commands.rs  parakeet_engine.rs
frontend/src-tauri/src/summary/: processor.rs
frontend/src-tauri/src/summary/summary_engine/: model_manager.rs  sidecar.rs
frontend/src-tauri/src/summary/templates/: defaults.rs  loader.rs  mod.rs  types.rs
frontend/src-tauri/src/whisper_engine/: commands.rs  whisper_engine.rs
frontend/src-tauri/templates/: README.md  daily_standup.json  project_sync.json  psychatric_session.json  retrospective.json  sales_marketing_client_call.json  standard_meeting.json
frontend/src/app/: globals.css  layout.tsx  metadata.ts  metadata.tsx  page.tsx
frontend/src/app/_components/: SettingsModal.tsx  StatusOverlays.tsx  TranscriptPanel.tsx
frontend/src/app/conversations/: page.tsx
frontend/src/app/gamification/: page.tsx
frontend/src/app/meeting-details/: page-content.tsx  page.tsx
frontend/src/app/notes/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: About.tsx  AnalyticsConsentSwitch.tsx  AnalyticsDataModal.tsx  AudioBackendSelector.tsx  AudioLevelMeter.tsx  BluetoothPlaybackWarning.tsx  BuiltInModelManager.tsx  CanaryModelManager.tsx  ChunkProgressDisplay.tsx  ComplianceNotification.tsx  ConfidenceIndicator.tsx  ConsoleToggle.tsx  CustomDialog.tsx  DeviceSelection.tsx  EditableTitle.tsx  EmptyStateSummary.tsx  ErrorBoundary.tsx  Info.tsx  LanguageSelection.tsx  LogExporter.tsx  Logo.tsx  MeetingDetectionDialog.tsx  MeetingDetectorSettings.tsx  MessageToast.tsx  ModelDownloadProgress.tsx  ModelSettingsModal.tsx  OfflineIndicator.tsx  ParakeetModelManager.tsx  PermissionWarning.tsx  PreferenceSettings.tsx  RecordingControls.tsx  RecordingSettings.tsx  RecordingStatusBar.tsx  SettingTabs.tsx  SummaryModelSettings.tsx  TranscriptSettings.tsx  TranscriptView.tsx  UpdateDialog.tsx  UpdateNotification.tsx  VirtualizedTranscriptView.tsx  (+1 more)
frontend/src/components/AISummary/: Block.tsx  BlockNoteSummaryView.tsx  ContextMenu.tsx  Section.tsx  index.tsx
frontend/src/components/Auth/: LoginScreen.tsx
frontend/src/components/BlockNoteEditor/: Editor.tsx
frontend/src/components/ConfirmationModel/: confirmation-modal.tsx
frontend/src/components/DatabaseImport/: HomebrewDatabaseDetector.tsx  LegacyDatabaseImport.tsx
frontend/src/components/MainContent/: index.tsx
frontend/src/components/Onboarding/: OnboardingFlow.tsx
frontend/src/contexts/: AuthContext.tsx  ConfigContext.tsx  OllamaDownloadContext.tsx  OnboardingContext.tsx  ParakeetAutoDownloadContext.tsx  RecordingPostProcessingProvider.tsx  RecordingStateContext.tsx  TranscriptContext.tsx
frontend/src/hooks/: useAudioPlayer.ts  useAutoScroll.ts  useModalState.ts  useNetworkStatus.ts  usePaginatedTranscripts.ts  useParakeetAutoDownload.ts  usePermissionCheck.ts  useProcessingProgress.ts  useRecordingLevels.ts  useRecordingStart.ts  useRecordingStateSync.ts  useRecordingStop.ts  useTranscriptRecovery.ts  useWindowCloseGuard.ts
frontend/src/lib/: analytics.ts  canary.ts  deepgram.ts  invokeWithRetry.ts  logger.ts  recordingNotification.tsx  retry.ts  supabase.ts
frontend/src/services/: configService.ts  indexedDBService.ts  storageService.ts  transcriptService.ts  updateService.ts
frontend/src/types/: auth.ts  index.ts  transcript.ts
scripts/: inject_transcript.py  test-update-locally.js
supabase/: config.toml
supabase/functions/deepgram-token/: index.ts
supabase/functions/deepseek-evaluate/: index.ts
(+63 files in other folders)
